<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.kymco.directionsapi.MapsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="#3F51B5"
        android:orientation="vertical">


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/road1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="目前路線"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/road2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="下一條路線"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="距離下一條路線"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

        </ScrollView>


    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/listView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/car_iv"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_car"/>

                    <ImageView
                        android:id="@+id/bicycle_iv"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_bicycle"/>

                    <ImageView
                        android:id="@+id/walking_iv"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_walking"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <CheckBox
                        android:id="@+id/avoid_highways_ckb"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:text="@string/demo_setting_avoid_highways"/>

                    <CheckBox
                        android:id="@+id/avoid_tolls_ckb"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:text="@string/demo_setting_avoid_tolls"/>

                    <CheckBox
                        android:id="@+id/avoid_ferries_ckb"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:text="@string/demo_setting_avoid_ferries"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/origin_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:hint="@string/demo_setting_origin"/>

                <EditText
                    android:id="@+id/destination_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:hint="@string/demo_setting_destination"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/go_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="10dp"
                        android:text="@string/demo_setting_go"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</LinearLayout>



